--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "include": ["src", ".eslintrc.js"],
+    "include": ["src", ".eslintrc.js", "index.d.ts"],
     "compilerOptions": {
         "resolveJsonModule": true,
         "outDir": "./build/",
