--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "build:dev": "webpack --env mode=development",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
-    "lint:scss": "stylelint \"**/*.scss\"",
-    "lint:scss:fix": "stylelint \"**/*.scss\" --fix",
+    "stylelint:scss": "stylelint \"**/*{.css,.scss}",
+    "stylelint-check": "stylelint-config-prettier-check",
+    "stylelint:scss:fix": "stylelint \"**/*{.css,.scss}\" --fix",
     "prettier:check": "npx prettier . --check",
     "prettier:fix": "npx prettier . --write",
-    "jest": "jest --config ./config/jest/jest.config.ts"
+    "jest": "jest --config ./config/jest/jest.config.ts",
+    "start:dev:server": "node ./json-server/index.js",
+    "loki:test": "npx loki test",
+    "loki:ok": "npx loki approve",
+    "loki:update": "npx loki update",
+    "test_ui_ci": "concurrently --kill-others --raw --success first \"npm run storybook\" \"npm run loki:test\"",
+    "storybook:start": "storybook dev -p 6006 -c ./config/storybook -s public",
+    "storybook:build": "storybook build -c ./config/storybook"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +31,13 @@
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-typescript": "^7.22.5",
     "@iconify/react": "^4.1.1",
-    "@storybook/react": "^7.2.1",
+    "@storybook/addon-a11y": "^7.4.0",
+    "@storybook/addon-essentials": "^7.4.0",
+    "@storybook/addon-interactions": "^7.4.0",
+    "@storybook/addon-links": "^7.4.0",
+    "@storybook/react": "^7.4.0",
+    "@storybook/react-webpack5": "^7.4.0",
+    "@storybook/testing-library": "^0.2.0",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
@@ -34,6 +48,7 @@
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.0",
+    "@types/storybook__react": "^5.2.1",
     "@types/webpack": "^5.28.1",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -53,11 +68,17 @@
     "image-webpack-loader": "^8.1.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
+    "json-server": "^0.17.3",
+    "loki": "^0.32.0",
     "mini-css-extract-plugin": "^2.7.6",
-    "prettier": "^3.0.1",
+    "postcss-scss": "^4.0.7",
+    "prettier": "^3.0.3",
     "sass": "^1.64.2",
     "sass-loader": "^13.3.2",
+    "storybook": "^7.4.0",
     "style-loader": "^3.3.3",
+    "stylelint": "^15.10.3",
+    "stylelint-config-standard": "^34.0.0",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
@@ -74,6 +95,24 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.3",
-    "react-router-dom": "^6.14.2"
+    "react-loader-spinner": "^5.4.5",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.14.2",
+    "stylelint-scss": "^5.1.0"
+  },
+  "loki": {
+    "configurations": {
+      "chrome.laptop": {
+        "target": "chrome.docker",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "chrome.iphone7": {
+        "target": "chrome.docker",
+        "preset": "iPhone 7"
+      }
+    }
   }
 }
