--- a/.stylelintrc
+++ b/.stylelintrc
@@ -11,7 +11,8 @@
         "no-missing-end-of-source-newline": null,
         "selector-class-pattern": null,
         "keyframes-name-pattern": null,
-        "selector-pseudo-class-no-unknown": null
+        "selector-pseudo-class-no-unknown": null,
+        "color-function-notation": "modern"
     },
     "ignoreFiles": [
         "**/*.tsx",
