--- a/package.json
+++ b/package.json
@@ -1,121 +1,121 @@
 {
-  "name": "shop",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack serve --env port=3000",
-    "build:prod": "webpack --env mode=production",
-    "build:dev": "webpack --env mode=development",
-    "lint:ts": "eslint \"**/*.{ts,tsx}\"",
-    "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
-    "stylelint:scss": "stylelint \"**/*{.css,.scss}",
-    "stylelint-check": "stylelint-config-prettier-check",
-    "stylelint:scss:fix": "stylelint \"**/*{.css,.scss}\" --fix",
-    "prettier:check": "npx prettier . --check",
-    "prettier:fix": "npx prettier . --write",
-    "jest": "jest --config ./config/jest/jest.config.ts",
-    "start:dev:server": "node ./json-server/index.js",
-    "loki:test": "npx loki test",
-    "loki:ok": "npx loki approve",
-    "loki:update": "npx loki update",
-    "test_ui_ci": "concurrently --kill-others --raw --success first \"npm run storybook\" \"npm run loki:test\"",
-    "storybook:start": "storybook dev -p 6006 -c ./config/storybook -s public",
-    "storybook:build": "storybook build -c ./config/storybook"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.22.10",
-    "@babel/preset-env": "^7.22.10",
-    "@babel/preset-typescript": "^7.22.5",
-    "@iconify/react": "^4.1.1",
-    "@storybook/addon-a11y": "^7.4.0",
-    "@storybook/addon-essentials": "^7.4.0",
-    "@storybook/addon-interactions": "^7.4.0",
-    "@storybook/addon-links": "^7.4.0",
-    "@storybook/react": "^7.4.0",
-    "@storybook/react-webpack5": "^7.4.0",
-    "@storybook/testing-library": "^0.2.0",
-    "@svgr/webpack": "^8.1.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.3",
-    "@types/node": "^20.4.8",
-    "@types/react": "^18.2.18",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-redux": "^7.1.25",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/redux": "^3.6.0",
-    "@types/storybook__react": "^5.2.1",
-    "@types/webpack": "^5.28.1",
-    "@types/webpack-dev-server": "^4.7.2",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "babel-jest": "^29.6.2",
-    "css-loader": "^6.8.1",
-    "eslint": "^8.46.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard-with-typescript": "^37.0.0",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-n": "^16.0.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.33.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.3",
-    "image-webpack-loader": "^8.1.0",
-    "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2",
-    "json-server": "^0.17.3",
-    "loki": "^0.32.0",
-    "mini-css-extract-plugin": "^2.7.6",
-    "prettier": "^3.0.3",
-    "sass": "^1.64.2",
-    "sass-loader": "^13.3.2",
-    "storybook": "^7.4.0",
-    "style-loader": "^3.3.3",
-    "stylelint": "^15.10.3",
-    "stylelint-config-clean-order": "^5.2.0",
-    "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-standard": "^34.0.0",
-    "stylelint-config-standard-scss": "^11.0.0",
-    "ts-loader": "^9.4.4",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "antd": "^5.8.2",
-    "i18next": "^23.4.2",
-    "i18next-browser-languagedetector": "^7.1.0",
-    "i18next-http-backend": "^2.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^13.0.3",
-    "react-loader-spinner": "^5.4.5",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.14.2",
-    "stylelint-scss": "^5.1.0"
-  },
-  "loki": {
-    "configurations": {
-      "chrome.laptop": {
-        "target": "chrome.docker",
-        "width": 1366,
-        "height": 768,
-        "deviceScaleFactor": 1,
-        "mobile": false
-      },
-      "chrome.iphone7": {
-        "target": "chrome.docker",
-        "preset": "iPhone 7"
-      }
+    "name": "shop",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "webpack serve --env port=3000",
+        "build:prod": "webpack --env mode=production",
+        "build:dev": "webpack --env mode=development",
+        "lint:ts": "eslint \"**/*.{ts,tsx}\"",
+        "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
+        "stylelint:scss": "stylelint \"**/*{.css,.scss}",
+        "stylelint-check": "stylelint-config-prettier-check",
+        "stylelint:scss:fix": "stylelint \"**/*{.css,.scss}\" --fix",
+        "prettier:check": "npx prettier . --check",
+        "prettier:fix": "npx prettier . --write",
+        "jest": "jest --config ./config/jest/jest.config.ts",
+        "start:dev:server": "node ./json-server/index.js",
+        "loki:test": "npx loki test",
+        "loki:ok": "npx loki approve",
+        "loki:update": "npx loki update",
+        "test_ui_ci": "concurrently --kill-others --raw --success first \"npm run storybook\" \"npm run loki:test\"",
+        "storybook:start": "storybook dev -p 6006 -c ./config/storybook -s public",
+        "storybook:build": "storybook build -c ./config/storybook"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@babel/core": "^7.22.10",
+        "@babel/preset-env": "^7.22.10",
+        "@babel/preset-typescript": "^7.22.5",
+        "@iconify/react": "^4.1.1",
+        "@storybook/addon-a11y": "^7.4.0",
+        "@storybook/addon-essentials": "^7.4.0",
+        "@storybook/addon-interactions": "^7.4.0",
+        "@storybook/addon-links": "^7.4.0",
+        "@storybook/react": "^7.4.0",
+        "@storybook/react-webpack5": "^7.4.0",
+        "@storybook/testing-library": "^0.2.0",
+        "@svgr/webpack": "^8.1.0",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^14.0.0",
+        "@types/jest": "^29.5.3",
+        "@types/node": "^20.4.8",
+        "@types/react": "^18.2.18",
+        "@types/react-dom": "^18.2.7",
+        "@types/react-redux": "^7.1.25",
+        "@types/react-router-dom": "^5.3.3",
+        "@types/redux": "^3.6.0",
+        "@types/storybook__react": "^5.2.1",
+        "@types/webpack": "^5.28.1",
+        "@types/webpack-dev-server": "^4.7.2",
+        "@typescript-eslint/eslint-plugin": "^5.62.0",
+        "babel-jest": "^29.6.2",
+        "css-loader": "^6.8.1",
+        "eslint": "^8.46.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-config-standard-with-typescript": "^37.0.0",
+        "eslint-import-resolver-typescript": "^3.6.0",
+        "eslint-plugin-import": "^2.28.0",
+        "eslint-plugin-n": "^16.0.1",
+        "eslint-plugin-prettier": "^5.0.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.33.1",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.5.3",
+        "image-webpack-loader": "^8.1.0",
+        "jest": "^29.6.2",
+        "jest-environment-jsdom": "^29.6.2",
+        "json-server": "^0.17.3",
+        "loki": "^0.32.0",
+        "mini-css-extract-plugin": "^2.7.6",
+        "prettier": "^3.0.3",
+        "sass": "^1.64.2",
+        "sass-loader": "^13.3.2",
+        "storybook": "^7.4.0",
+        "style-loader": "^3.3.3",
+        "stylelint": "^15.10.3",
+        "stylelint-config-clean-order": "^5.2.0",
+        "stylelint-config-prettier": "^9.0.5",
+        "stylelint-config-standard": "^34.0.0",
+        "stylelint-config-standard-scss": "^11.0.0",
+        "stylelint-scss": "^5.1.0",
+        "ts-loader": "^9.4.4",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.6",
+        "webpack": "^5.88.2",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1"
+    },
+    "dependencies": {
+        "@reduxjs/toolkit": "^1.9.5",
+        "antd": "^5.8.2",
+        "i18next": "^23.4.2",
+        "i18next-browser-languagedetector": "^7.1.0",
+        "i18next-http-backend": "^2.2.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-i18next": "^13.0.3",
+        "react-loader-spinner": "^5.4.5",
+        "react-redux": "^8.1.2",
+        "react-router-dom": "^6.14.2"
+    },
+    "loki": {
+        "configurations": {
+            "chrome.laptop": {
+                "target": "chrome.docker",
+                "width": 1366,
+                "height": 768,
+                "deviceScaleFactor": 1,
+                "mobile": false
+            },
+            "chrome.iphone7": {
+                "target": "chrome.docker",
+                "preset": "iPhone 7"
+            }
+        }
     }
-  }
 }
