--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@babel/core": "^7.22.10",
-        "@babel/preset-env": "^7.22.10",
+        "@babel/core": "^7.23.0",
+        "@babel/preset-env": "^7.22.20",
         "@babel/preset-typescript": "^7.22.5",
-        "@iconify/react": "^4.1.1",
         "@storybook/addon-a11y": "^7.4.0",
         "@storybook/addon-essentials": "^7.4.0",
         "@storybook/addon-interactions": "^7.4.0",
@@ -52,20 +51,23 @@
         "@types/webpack": "^5.28.1",
         "@types/webpack-dev-server": "^4.7.2",
         "@typescript-eslint/eslint-plugin": "^5.62.0",
-        "babel-jest": "^29.6.2",
+        "babel-jest": "^29.7.0",
         "css-loader": "^6.8.1",
         "eslint": "^8.46.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-config-standard-with-typescript": "^37.0.0",
         "eslint-import-resolver-typescript": "^3.6.0",
         "eslint-plugin-import": "^2.28.0",
+        "eslint-plugin-jest-dom": "^5.1.0",
         "eslint-plugin-n": "^16.0.1",
         "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-react": "^7.33.1",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-testing-library": "^6.0.2",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.3",
+        "identity-obj-proxy": "^3.0.0",
         "image-webpack-loader": "^8.1.0",
         "jest": "^29.6.2",
         "jest-environment-jsdom": "^29.6.2",
@@ -83,6 +85,7 @@
         "stylelint-config-standard": "^34.0.0",
         "stylelint-config-standard-scss": "^11.0.0",
         "stylelint-scss": "^5.1.0",
+        "ts-jest": "^29.1.1",
         "ts-loader": "^9.4.4",
         "ts-node": "^10.9.1",
         "typescript": "^5.1.6",
@@ -91,6 +94,8 @@
         "webpack-dev-server": "^4.15.1"
     },
     "dependencies": {
+        "@iconify/icons-line-md": "^1.2.26",
+        "@iconify/react": "^4.1.1",
         "@reduxjs/toolkit": "^1.9.5",
         "antd": "^5.8.2",
         "i18next": "^23.4.2",
