--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "noImplicitAny": true,
         "module": "ESNext",
         "target": "ES5",
+        "downlevelIteration": true,
         "sourceMap": true,
         "jsx": "react-jsx",
         "allowJs": true,
