added framer-motion to the project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "include": ["src", ".eslintrc.js", "index.d.ts"],
     "compilerOptions": {
+        "strictNullChecks": true,
         "resolveJsonModule": true,
         "outDir": "./build/",
         "noImplicitAny": true,
