--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
         "@iconify/react": "^4.1.1",
         "@reduxjs/toolkit": "^1.9.5",
         "antd": "^5.8.2",
+        "framer-motion": "^10.16.4",
         "i18next": "^23.4.2",
         "i18next-browser-languagedetector": "^7.1.0",
         "i18next-http-backend": "^2.2.1",
