--- a/package.json
+++ b/package.json
@@ -44,9 +44,7 @@
         "@types/node": "^20.4.8",
         "@types/react": "^18.2.18",
         "@types/react-dom": "^18.2.7",
-        "@types/react-redux": "^7.1.25",
         "@types/react-router-dom": "^5.3.3",
-        "@types/redux": "^3.6.0",
         "@types/storybook__react": "^5.2.1",
         "@types/webpack": "^5.28.1",
         "@types/webpack-dev-server": "^4.7.2",
@@ -91,13 +89,15 @@
         "typescript": "^5.1.6",
         "webpack": "^5.88.2",
         "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^4.15.1"
+        "webpack-dev-server": "^4.15.1",
+        "@types/redux": "^3.6.0"
     },
     "dependencies": {
         "@iconify/icons-line-md": "^1.2.26",
         "@iconify/react": "^4.1.1",
-        "@reduxjs/toolkit": "^1.9.5",
+        "@reduxjs/toolkit": "^1.9.7",
         "antd": "^5.8.2",
+        "axios": "^1.5.1",
         "i18next": "^23.4.2",
         "i18next-browser-languagedetector": "^7.1.0",
         "i18next-http-backend": "^2.2.1",
@@ -105,7 +105,7 @@
         "react-dom": "^18.2.0",
         "react-i18next": "^13.0.3",
         "react-loader-spinner": "^5.4.5",
-        "react-redux": "^8.1.2",
+        "react-redux": "^8.1.3",
         "react-router-dom": "^6.14.2"
     },
     "loki": {
