--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
         "@types/react": "^18.2.18",
         "@types/react-dom": "^18.2.7",
         "@types/react-router-dom": "^5.3.3",
+        "@types/react-transition-group": "^4.4.8",
+        "@types/redux": "^3.6.0",
         "@types/storybook__react": "^5.2.1",
         "@types/webpack": "^5.28.1",
         "@types/webpack-dev-server": "^4.7.2",
@@ -89,8 +91,7 @@
         "typescript": "^5.1.6",
         "webpack": "^5.88.2",
         "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^4.15.1",
-        "@types/redux": "^3.6.0"
+        "webpack-dev-server": "^4.15.1"
     },
     "dependencies": {
         "@iconify/icons-line-md": "^1.2.26",
@@ -106,7 +107,8 @@
         "react-i18next": "^13.0.3",
         "react-loader-spinner": "^5.4.5",
         "react-redux": "^8.1.3",
-        "react-router-dom": "^6.14.2"
+        "react-router-dom": "^6.14.2",
+        "react-transition-group": "^4.4.5"
     },
     "loki": {
         "configurations": {
