--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "loki:update": "npx loki update",
         "test_ui_ci": "concurrently --kill-others --raw --success first \"npm run storybook\" \"npm run loki:test\"",
         "storybook:start": "storybook dev -p 6006 -c ./config/storybook -s public",
-        "storybook:build": "storybook build -c ./config/storybook"
+        "storybook:build": "storybook build -c ./config/storybook",
+        "prepare": "husky install"
     },
     "keywords": [],
     "author": "",
@@ -67,6 +68,7 @@
         "eslint-plugin-testing-library": "^6.0.2",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.3",
+        "husky": "^8.0.0",
         "identity-obj-proxy": "^3.0.0",
         "image-webpack-loader": "^8.1.0",
         "jest": "^29.6.2",
