--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "stylelint:scss:fix": "stylelint \"**/*{.css,.scss}\" --fix",
         "prettier:check": "npx prettier . --check",
         "prettier:fix": "npx prettier . --write",
-        "jest:test": "env NODE_ENV=test jest --ci --config ./config/jest/jest.config.ts",
+        "jest:g:test": "env NODE_ENV=test jest --ci --config ./config/jest/jest.config.ts",
+        "jest:test": "jest --config ./config/jest/jest.config.ts",
         "start:dev:server": "node ./json-server/index.js",
         "loki:test": "npx loki test",
         "loki:ok": "npx loki approve",
